--- a/Timon.Business/Timon.Business.csproj
+++ b/Timon.Business/Timon.Business.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Timon.Abstract\Timon.Abstract.csproj" />
+      <ProjectReference Include="..\Timon.DataAccess\Timon.DataAccess.csproj" />
+      <ProjectReference Include="..\Timon.Exceptions\Timon.Exceptions.csproj" />
+    </ItemGroup>
+
 </Project>
