--- a/Timon.DataAccess/Timon.DataAccess.csproj
+++ b/Timon.DataAccess/Timon.DataAccess.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Timon.Exceptions\Timon.Exceptions.csproj" />
+    </ItemGroup>
+
 </Project>
