added new services, added charts package, mono package, updated viewmodels

--- a/Timon.Abstract/Timon.Abstract.csproj
+++ b/Timon.Abstract/Timon.Abstract.csproj
@@ -6,4 +6,11 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="DataAccess\Repository\" />
+      <Folder Include="Statistics\" />
+      <Folder Include="User\" />
+      <Folder Include="TimeRecord\" />
+    </ItemGroup>
+
 </Project>
