--- a/Timon.DataAccess/Timon.DataAccess.csproj
+++ b/Timon.DataAccess/Timon.DataAccess.csproj
@@ -22,6 +22,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Timon.Abstract\Timon.Abstract.csproj" />
       <ProjectReference Include="..\Timon.Exceptions\Timon.Exceptions.csproj" />
     </ItemGroup>
 
