--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.8"
 services:
-  sql-server-db:
-    container_name: MS-SQLSERVER
+  timon-sql-server-db:
+    container_name: TIMON-MS-SQLSERVER
     restart: always
     hostname: sql-server-db
     image: mcr.microsoft.com/mssql/server:2022-latest
