added IStatisticsService, added OAuth, moved all services to "Services" namespace, removed register page, changed login page, added animation for login page

--- a/Timon.Business/Timon.Business.csproj
+++ b/Timon.Business/Timon.Business.csproj
@@ -13,14 +13,26 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="MoneyRecord\" />
-      <Folder Include="Statistics\" />
-      <Folder Include="User\" />
-      <Folder Include="TimeRecord\" />
+      <Folder Include="Services\MoneyRecord\" />
+      <Folder Include="Auth0\" />
+      <Folder Include="Services\Statistics\" />
+      <Folder Include="Services\User\" />
+      <Folder Include="Services\TimeRecord\" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="IdentityModel.OidcClient" Version="5.2.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
       <PackageReference Include="Mono.Api.Connector" Version="2.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="Microsoft.Maui.Essentials">
+        <HintPath>..\..\..\..\..\Program Files\dotnet\packs\Microsoft.Maui.Essentials.Ref.android\7.0.86\ref\net7.0-android30.0\Microsoft.Maui.Essentials.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
