--- a/Timon.Abstract/Timon.Abstract.csproj
+++ b/Timon.Abstract/Timon.Abstract.csproj
@@ -8,9 +8,17 @@
 
     <ItemGroup>
       <Folder Include="DataAccess\Repository\" />
-      <Folder Include="Statistics\" />
-      <Folder Include="User\" />
-      <Folder Include="TimeRecord\" />
+      <Folder Include="Services\Categories\" />
+      <Folder Include="Services\Statistics\" />
+      <Folder Include="Services\User\" />
+      <Folder Include="Services\TimeRecord\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
     </ItemGroup>
 
 </Project>
