--- a/Timon.Maui/Timon.Maui.csproj
+++ b/Timon.Maui/Timon.Maui.csproj
@@ -51,6 +51,8 @@
     <ItemGroup>
         <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
         <PackageReference Include="LiveChartsCore.SkiaSharpView.Maui" Version="2.0.0-beta.710" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
     </ItemGroup>
 
@@ -58,14 +60,10 @@
       <ProjectReference Include="..\Timon.Abstract\Timon.Abstract.csproj" />
       <ProjectReference Include="..\Timon.Business\Timon.Business.csproj" />
       <ProjectReference Include="..\Timon.DataAccess\Timon.DataAccess.csproj" />
-      <ProjectReference Include="..\Timon.Exceptions\Timon.Exceptions.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <MauiXaml Update="Views\Authentication\LoginPage.xaml">
-        <Generator>MSBuild:Compile</Generator>
-      </MauiXaml>
-      <MauiXaml Update="Views\Authentication\RegisterPage.xaml">
         <Generator>MSBuild:Compile</Generator>
       </MauiXaml>
       <MauiXaml Update="Views\MoneyRecord\AddMoneyRecordPage.xaml">
