--- a/Timon.DatabaseMigrator/Timon.DatabaseMigrator.csproj
+++ b/Timon.DatabaseMigrator/Timon.DatabaseMigrator.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Timon.DataAccess\Timon.DataAccess.csproj" />
+  </ItemGroup>
+
 </Project>
