Added migrations, changed namespace for context, added money record type,

--- a/Timon.DataAccess/Timon.DataAccess.csproj
+++ b/Timon.DataAccess/Timon.DataAccess.csproj
@@ -31,4 +31,8 @@
       <ProjectReference Include="..\Timon.Exceptions\Timon.Exceptions.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Data\" />
+    </ItemGroup>
+
 </Project>
