--- a/Timon.Business/Timon.Business.csproj
+++ b/Timon.Business/Timon.Business.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <Folder Include="Services\MoneyRecord\" />
       <Folder Include="Auth0\" />
+      <Folder Include="Services\Notifications\" />
       <Folder Include="Services\Recommendations\" />
       <Folder Include="Services\Statistics\" />
       <Folder Include="Services\User\" />
@@ -24,6 +25,7 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.1" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+      <PackageReference Include="Going.Plaid" Version="6.0.0" />
       <PackageReference Include="IdentityModel.OidcClient" Version="5.2.1" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
